哈哈哈2水电费1123c

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,7 +42,6 @@
 
         .app-loading .app-loading-title {
           margin-bottom: 30px;
-          font-size: 20px;
           font-weight: bold;
           text-align: center;
         }
